@@ -1,16 +1,28 @@
 package com.example.configs;
 
+import org.springframework.boot.web.embedded.tomcat.TomcatProtocolHandlerCustomizer;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.task.AsyncTaskExecutor;
+import org.springframework.core.task.support.TaskExecutorAdapter;
+import org.springframework.scheduling.annotation.EnableAsync;
 
-import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
+@EnableAsync
 @Configuration
 public class ExecutorConfig {
 
     @Bean
-    public ExecutorService executorService() {
-        return Executors.newFixedThreadPool(200); // You can adjust the thread pool size
+    public AsyncTaskExecutor applicationTaskExecutor() {
+        return new TaskExecutorAdapter(Executors.newVirtualThreadPerTaskExecutor());
     }
+
+    @Bean
+    public TomcatProtocolHandlerCustomizer<?> protocolHandlerVirtualThreadExecutorCustomizer() {
+        return protocolHandler -> {
+            protocolHandler.setExecutor(Executors.newVirtualThreadPerTaskExecutor());
+        };
+    }
+
 }
